--- a/index.css
+++ b/index.css
@@ -1,15 +1,18 @@
 body {
-    background-color: #ADD8E6;
+    background-image: url('774ced25-6901-4a77-8d97-f37a3ac93513.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 main {
-    display: flex;
-    justify-content: center;
+    display: block;
 }
 header {
     width: 368px;
     margin: auto;
     margin-bottom: 32px;
+    padding-top: 10px;
 }
 p {
     margin: 0px;
@@ -17,9 +20,17 @@ p {
 }
 #heading {
     display: block;
-    justify-content: center;
-    align-items: center;
-    
+    max-width: 191px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 #main-div {
     background-color: white;
@@ -27,7 +38,9 @@ p {
     width: 448px;
     max-width: 448px;
     border: 0px solid #E2E8f0;
-    padding: 40px 40px 48px 40px;
+    margin: auto;
+    border-radius: 20px;
+    border-bottom-left-radius: 0px;
 }
 h1 {
 	font-family: U8, sans-serif;
@@ -213,4 +226,24 @@ h1 {
         border-bottom-left-radius: 0px;
     }
 
-
+    #login {
+        font-family: Karla, sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: 400;
+        letter-spacing: normal;
+        line-height: 21px;
+        text-decoration: none solid white;
+        text-align: center;
+        text-indent: 0px;
+        text-transform: none;
+        white-space: normal;
+        word-spacing: 0px;
+        display: block;
+        width: 244.48px;
+        height: 55px;
+        margin: 0px auto;
+        padding-top: 25px;
+        color: white;
+    }
